{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 1,
  "lineage": "6770e877-48c2-7d1f-9c6b-507b16dd3687",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nic_ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3483d819-fca0-4cbb-a560-cb8f86673b42/resourceGroups/RGtf_NSGs/providers/Microsoft.Network/networkSecurityGroups/NIC_Ubuntu",
            "location": "westeurope",
            "name": "NIC_Ubuntu",
            "resource_group_name": "RGtf_NSGs",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "training",
              "source": "cadri"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.RGtf_NSGs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "resource_group_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3483d819-fca0-4cbb-a560-cb8f86673b42/resourceGroups/RGtf_NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault",
            "location": "westeurope",
            "name": "ResourceGroupDefault",
            "resource_group_name": "RGtf_NSGs",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSQLServer",
                "priority": 1030,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 1021,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 1020,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "training",
              "source": "cadri"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.RGtf_NSGs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowHTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3483d819-fca0-4cbb-a560-cb8f86673b42/resourceGroups/RGtf_NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "RGtf_NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.RGtf_NSGs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowHTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3483d819-fca0-4cbb-a560-cb8f86673b42/resourceGroups/RGtf_NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowHTTPS",
            "name": "AllowHTTPS",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1021,
            "protocol": "Tcp",
            "resource_group_name": "RGtf_NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.RGtf_NSGs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowSQLServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "1443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3483d819-fca0-4cbb-a560-cb8f86673b42/resourceGroups/RGtf_NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowSQLServer",
            "name": "AllowSQLServer",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1030,
            "protocol": "Tcp",
            "resource_group_name": "RGtf_NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.RGtf_NSGs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowSSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3483d819-fca0-4cbb-a560-cb8f86673b42/resourceGroups/RGtf_NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1010,
            "protocol": "Tcp",
            "resource_group_name": "RGtf_NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.RGtf_NSGs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpnGatewayPublicIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/3483d819-fca0-4cbb-a560-cb8f86673b42/resourceGroups/RGtf_net/providers/Microsoft.Network/publicIPAddresses/vpnGatewayPublicIp",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vpnGatewayPublicIp",
            "resource_group_name": "RGtf_net",
            "sku": "Basic",
            "tags": {
              "env": "training",
              "source": "cadri"
            }
          },
          "dependencies": [
            "azurerm_resource_group.RGtf_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "core",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "1.1.1.1",
              "1.0.0.1"
            ],
            "guid": "4833ab0c-c4c8-460f-bb89-748fb631e8eb",
            "id": "/subscriptions/3483d819-fca0-4cbb-a560-cb8f86673b42/resourceGroups/RGtf_net/providers/Microsoft.Network/virtualNetworks/core",
            "location": "westeurope",
            "name": "core",
            "resource_group_name": "RGtf_net",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/3483d819-fca0-4cbb-a560-cb8f86673b42/resourceGroups/RGtf_net/providers/Microsoft.Network/virtualNetworks/core/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/3483d819-fca0-4cbb-a560-cb8f86673b42/resourceGroups/RGtf_net/providers/Microsoft.Network/virtualNetworks/core/subnets/training",
                "name": "training"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/3483d819-fca0-4cbb-a560-cb8f86673b42/resourceGroups/RGtf_net/providers/Microsoft.Network/virtualNetworks/core/subnets/dev",
                "name": "dev"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.RGtf_net"
          ]
        }
      ]
    }
  ]
}